frontend/src/css/viewports.css
@media (max-width: 1000px) {
    #articleMainContainer {
        width: 100% !important;
    }
    #logoIcon {
        width: 24px !important;
    }
}

@media (max-width: 600px) {
    .searchBarContainer {
        height: 34px;
    }
    #navTitleParent {
        display: none;
    }
    #headNavIcons {
        display: none;
    }
    #outerSearchContainer {
        gap: 45px;
    }
    #searchBar {
        font-size: 16px;
        height: 38px;
    }
    #spinnerContainer {
        height: 38px;
    }
}

@media (max-width: 500px) {
    #midContainerTitle {
        font-size: 26px;
    }
}

